# laboratorio8_ing_soft

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  sonar-project.properties
docs/: ARQUITECTURA.docx  ARQUITECTURA.md  build_docx.py
docs/evidencia/: pytest_salida.txt
docs/evidencia/cobertura_html/: class_index.html  function_index.html  index.html  status.json  z_3e40b9eefeef8894___init___py.html  z_3e40b9eefeef8894_in_memory_account_repository_py.html  z_69789fefc3e8f94f___init___py.html  z_69789fefc3e8f94f_config_py.html  z_69789fefc3e8f94f_serialization_py.html  z_a700fb3e51208d43___init___py.html  z_a837d012b1575d89___init___py.html  z_a837d012b1575d89_connection_py.html  z_a837d012b1575d89_rabbitmq_consumer_py.html  z_a837d012b1575d89_rabbitmq_publisher_py.html  z_e1d580330d3669f9___init___py.html  z_e1d580330d3669f9_consumer_app_py.html  z_e1d580330d3669f9_producer_app_py.html  (+9 more)
examples/: consumer-kafka.py  consumer-rabbit.py  producer-kafka.py  producer-rabbit.py
restaurant_rewards/: __init__.py
restaurant_rewards/application/: __init__.py  process_reward.py  register_dinner.py
restaurant_rewards/apps/: __init__.py  consumer_app.py  producer_app.py
restaurant_rewards/domain/: __init__.py  events.py  model.py  ports.py  reward_policy.py  value_objects.py
restaurant_rewards/infrastructure/: __init__.py  config.py  serialization.py
tests/: fakes.py  test_apps.py  test_infrastructure.py  test_model.py  test_process_reward.py  test_register_dinner.py  test_reward_policy.py  test_serialization.py  test_value_objects.py
(+6 files in other folders)
